updated backend to use new models for synchronising with client
