# backend/src/controllers/databaseController.ts
@@ -1,8 +1,8 @@
 import neo4j, {Driver, QueryResult} from "neo4j-driver";
 import Entity from "../models/entity";
 import Attribute from "../models/attribute";
-import Relationship, { LHConstraint } from "../models/relationship";
-import { driver } from "neo4j-driver-core";
+import Relationship, {LHConstraint} from "../models/relationship";
+import {driver} from "neo4j-driver-core";
 
 class DatabaseController {
 
@@ -11,8 +11,8 @@ class DatabaseController {
 
     private constructor() {
         // TODO use config or env to store variables
-        // this.databaseDriver = neo4j.driver("bolt://localhost:7687", neo4j.auth.basic("neo4j", "123456"));
-        this.databaseDriver = neo4j.driver((process.env.NEO_URL ?? ""), neo4j.auth.basic((process.env.NEO_USERNAME ?? ""), (process.env.NEO_PASSWORD ?? "")));
+        this.databaseDriver = neo4j.driver("bolt://localhost:7687", neo4j.auth.basic("neo4j", "123456"));
+        // this.databaseDriver = neo4j.driver((process.env.NEO_URL ?? ""), neo4j.auth.basic((process.env.NEO_USERNAME ?? ""), (process.env.NEO_PASSWORD ?? "")));
     }
 
     public static getInstance(): DatabaseController {
@@ -47,11 +47,14 @@ class DatabaseController {
         await this.databaseDriver.close();
     }
 
-    public async createEntity(entity: Entity) {
-
+    public async createEntity({
+                                  pos,
+                                  ...entity
+                              }: Entity) {
+        console.log(entity)
         const session = this.databaseDriver.session()
 
-        var entityKeys = ['identifier', 'positionX', 'positionY', 'shapeWidth', 'shapeHeight', 'name']
+        var entityKeys = ['id', 'posX', 'posY', 'text', 'name']
         if (entity.isWeak !== undefined) {
             entityKeys.push('isWeak')
         }
@@ -63,8 +66,13 @@ class DatabaseController {
         try {
             const result: QueryResult = await session.writeTransaction(tx =>
                 tx.run(
-                    `CREATE (e:ENTITY) SET ${entityKeys.join(', ')} RETURN e.name`,
-                    entity,
+                    `CREATE (e:ENTITY) SET ${entityKeys.join(', ')} RETURN e.text`,
+                    {
+                        ...entity,
+                        posX: pos.x,
+                        posY: pos.y,
+                        name: entity.text,
+                    },
                 )
             )
             DatabaseController.verifyDatabaseUpdate(result)
@@ -73,11 +81,14 @@ class DatabaseController {
         }
     }
 
-    private async createAttribute(attribute: Attribute) {
+    private async createAttribute({
+                                      relativePos,
+                                      ...attribute
+                                  }: Attribute) {
         const session = this.databaseDriver.session()
 
-        var attributeKeys: String[] = ['identifier', 'positionX', 'positionY', 'shapeWidth', 'shapeHeight', 'name',
-            'isPrimaryKey', 'isOptional']
+        var attributeKeys: String[] = ['id', 'posX', 'posY', 'text', 'isMultiValued',
+            'isPrimaryKey', 'isOptional', 'name']
 
         attributeKeys = attributeKeys.map((key) => {
             return `a.${key} = $${key}`
@@ -86,8 +97,13 @@ class DatabaseController {
         try {
             const result: QueryResult = await session.writeTransaction(tx =>
                 tx.run(
-                    `CREATE (a:ATTRIBUTE) SET ${attributeKeys.join(', ')} RETURN a.name`,
-                    attribute,
+                    `CREATE (a:ATTRIBUTE) SET ${attributeKeys.join(', ')} RETURN a.text`,
+                    {
+                        ...attribute,
+                        posX: relativePos.x,
+                        posY: relativePos.y,
+                        name: attribute.text,
+                    },
                 )
             )
             DatabaseController.verifyDatabaseUpdate(result)
@@ -105,11 +121,11 @@ class DatabaseController {
             await this.createAttribute(attribute);
             const result = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (a:RELATIONSHIP), (b:ATTRIBUTE) WHERE a.identifier = $relationshipIdentifier AND b.identifier = $attributeIdentifier ' +
+                    'MATCH (a:RELATIONSHIP), (b:ATTRIBUTE) WHERE a.id = $relationshipIdentifier AND b.id = $attributeIdentifier ' +
                     'CREATE (a)-[r:Attribute]->(b) RETURN type(r)',
                     {
-                        relationshipIdentifier: relationship.identifier,
-                        attributeIdentifier: attribute.identifier
+                        relationshipIdentifier: relationship.id,
+                        attributeIdentifier: attribute.id
                     },
                 )
             )
@@ -124,15 +140,18 @@ class DatabaseController {
 
         const session = this.databaseDriver.session()
 
+        console.log(entity.id)
+        console.log(attribute.id)
+
         try {
             await this.createAttribute(attribute);
             const result = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (a:ENTITY), (b:ATTRIBUTE) WHERE a.identifier = $entityIdentifier AND b.identifier = $attributeIdentifier ' +
+                    'MATCH (a:ENTITY), (b:ATTRIBUTE) WHERE a.id = $entityIdentifier AND b.id = $attributeIdentifier ' +
                     'CREATE (a)-[r:Attribute]->(b) RETURN type(r)',
                     {
-                        entityIdentifier: entity.identifier,
-                        attributeIdentifier: attribute.identifier
+                        entityIdentifier: entity.id,
+                        attributeIdentifier: attribute.id
                     },
                 )
             )
@@ -142,10 +161,13 @@ class DatabaseController {
         }
     }
 
-    private async createRelationship(relationship: Relationship) {
+    private async createRelationship({
+                                         pos,
+                                         ...relationship
+                                     }: Relationship) {
         const session = this.databaseDriver.session()
 
-        var relationshipKeys: String[] = ['identifier', 'positionX', 'positionY', 'shapeWidth', 'shapeHeight', 'name']
+        var relationshipKeys: String[] = ['id', 'posX', 'posY', 'text', 'name']
 
         relationshipKeys = relationshipKeys.map((key) => {
             return `a.${key} = $${key}`
@@ -154,8 +176,13 @@ class DatabaseController {
         try {
             const result: QueryResult = await session.writeTransaction(tx =>
                 tx.run(
-                    `CREATE (a:RELATIONSHIP) SET ${relationshipKeys} RETURN a.name`,
-                    relationship,
+                    `CREATE (a:RELATIONSHIP) SET ${relationshipKeys} RETURN a.text`,
+                    {
+                        ...relationship,
+                        posX: pos.x,
+                        posY: pos.y,
+                        name: relationship.text,
+                    },
                 )
             )
             DatabaseController.verifyDatabaseUpdate(result)
@@ -174,11 +201,11 @@ class DatabaseController {
             for (var entityIdentifier of relationship.lHConstraints.keys()) {
                 const firstRelation = await session.writeTransaction(tx =>
                     tx.run(
-                        'MATCH (a:ENTITY), (b:RELATIONSHIP) WHERE a.identifier = $entityIdentifier AND b.identifier = $relationshipIdentifier ' +
+                        'MATCH (a:ENTITY), (b:RELATIONSHIP) WHERE a.id = $entityIdentifier AND b.id = $relationshipIdentifier ' +
                         `CREATE (a)-[r:${relationship.lHConstraints.get(entityIdentifier)!}]->(b) RETURN type(r)`,
                         {
                             entityIdentifier: entityIdentifier,
-                            relationshipIdentifier: relationship.identifier,
+                            relationshipIdentifier: relationship.id,
                         },
                     )
                 )
@@ -190,10 +217,13 @@ class DatabaseController {
         }
     }
 
-    public async createSubset(subset: Entity) {
+    public async createSubset({
+                                  pos,
+                                  ...subset
+                              }: Entity) {
         const session = this.databaseDriver.session()
 
-        var entityKeys = ['identifier', 'positionX', 'positionY', 'shapeWidth', 'shapeHeight', 'name']
+        var entityKeys = ['id', 'posX', 'posY', 'text', 'name']
         if (subset.isWeak !== undefined) {
             entityKeys.push('isWeak')
         }
@@ -205,8 +235,13 @@ class DatabaseController {
         try {
             const result: QueryResult = await session.writeTransaction(tx =>
                 tx.run(
-                    `CREATE (e:SUBSET) SET ${entityKeys.join(', ')} RETURN e.name`,
-                    subset,
+                    `CREATE (e:SUBSET) SET ${entityKeys.join(', ')} RETURN e.text`,
+                    {
+                        ...subset,
+                        posX: pos.x,
+                        posY: pos.y,
+                        name: subset.text
+                    },
                 )
             )
             DatabaseController.verifyDatabaseUpdate(result)
@@ -221,11 +256,11 @@ class DatabaseController {
         try {
             const entities = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (a:ENTITY), (b:SUBSET) WHERE a.identifier = $entityIdentifier AND b.identifier = $subsetIdentifier ' +
+                    'MATCH (a:ENTITY), (b:SUBSET) WHERE a.id = $entityIdentifier AND b.id = $subsetIdentifier ' +
                     `CREATE (a)-[r:SUBSET]->(b) RETURN type(r)`,
                     {
-                        entityIdentifier: entity.identifier,
-                        subsetIdentifier: subset.identifier,
+                        entityIdentifier: entity.id,
+                        subsetIdentifier: subset.id,
                     },
                 )
             )
@@ -259,7 +294,7 @@ class DatabaseController {
         try {
             const entitiesWithAttributes = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (n:ENTITY)-[r]->(a:ATTRIBUTE) WITH n, a as attributes RETURN { nodeID: n.identifier, ' +
+                    'MATCH (n:ENTITY)-[r]->(a:ATTRIBUTE) WITH n, a as attributes RETURN { nodeID: n.id, ' +
                     'attributes: collect(attributes) }',
                 )
             )
@@ -277,7 +312,7 @@ class DatabaseController {
         try {
             const entitiesWithAttributes = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (n:ENTITY)-[r]->(s:SUBSET) WITH n, s as subsets RETURN { nodeID: n.identifier, ' +
+                    'MATCH (n:ENTITY)-[r]->(s:SUBSET) WITH n, s as subsets RETURN { nodeID: n.id, ' +
                     'subsets: collect(subsets) }',
                 )
             )
@@ -294,7 +329,7 @@ class DatabaseController {
         try {
             const entitiesWithAttributes = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (r:RELATIONSHIP)<-[re]-(n:ENTITY) with r, {lhConstraint: re, entityID: n.identifier} ' +
+                    'MATCH (r:RELATIONSHIP)<-[re]-(n:ENTITY) with r, {lhConstraint: re, entityID: n.id} ' +
                     'as relations RETURN { relationship: r, entities: collect(relations) }',
                 )
             )
@@ -313,7 +348,7 @@ class DatabaseController {
         try {
             const relationshipWithAttributes = await session.writeTransaction(tx =>
                 tx.run(
-                    'MATCH (n:RELATIONSHIP)-[r]->(a:ATTRIBUTE) WITH n, a as attributes RETURN { relationshipID: n.identifier, ' +
+                    'MATCH (n:RELATIONSHIP)-[r]->(a:ATTRIBUTE) WITH n, a as attributes RETURN { relationshipID: n.id, ' +
                     'attributes: collect(attributes) }',
                 )
             )
