# backend/src/routes/schema.ts
@@ -7,82 +7,82 @@ import SchemaController from "../controllers/schemaController";
 
 const router = Router();
 
-router.get("/example", async function (req, res, next) {
-    var mockEntity = [
-        {
-            identifier: 1,
-            positionX: 1,
-            positionY: 2,
-            shapeWidth: 4,
-            shapeHeight: 4,
-            name: 'Mock Entity 1',
-            isWeak: true,
-            attributes: [
-                {
-                    identifier: 1,
-                    positionX: 2,
-                    positionY: 4,
-                    shapeWidth: 4,
-                    shapeHeight: 4,
-                    name: 'Mock Attribute 1',
-                    isPrimaryKey: false,
-                    isOptional: false,
-                }
-            ]
-        },
-        {
-            identifier: 2,
-            positionX: 1,
-            positionY: 2,
-            shapeWidth: 4,
-            shapeHeight: 4,
-            name: 'Mock Entity 2',
-            isWeak: true,
-            attributes: [
-                {
-                    identifier: 2,
-                    positionX: 2,
-                    positionY: 4,
-                    shapeWidth: 4,
-                    shapeHeight: 4,
-                    name: 'Mock Attribute 2',
-                    isPrimaryKey: false,
-                    isOptional: false,
-                }
-            ]
-        }
-    ]
-
-    var mockRelationship = [{
-        identifier: 1,
-        positionX: 1,
-        positionY: 2,
-        shapeWidth: 4,
-        shapeHeight: 4,
-        name: 'Mock Relationship',
-        attributes: [
-            {
-                identifier: 3,
-                positionX: 2,
-                positionY: 4,
-                shapeWidth: 4,
-                shapeHeight: 4,
-                name: 'Mock Attribute Relationship',
-                isPrimaryKey: false,
-                isOptional: false,
-            }
-        ],
-        lHConstraints: new Map([
-                [1, LHConstraint.ONE_TO_MANY],
-                [2, LHConstraint.ONE_TO_MANY],
-            ],
-        ),
-    }]
-
-    SchemaController.getInstance().addAllEntities(mockEntity);
-
-    return res.status(OK).json({SUCCESS: true});
-});
+// router.get("/example", async function (req, res, next) {
+//     var mockEntity = [
+//         {
+//             identifier: 1,
+//             positionX: 1,
+//             positionY: 2,
+//             shapeWidth: 4,
+//             shapeHeight: 4,
+//             name: 'Mock Entity 1',
+//             isWeak: true,
+//             attributes: [
+//                 {
+//                     identifier: 1,
+//                     positionX: 2,
+//                     positionY: 4,
+//                     shapeWidth: 4,
+//                     shapeHeight: 4,
+//                     name: 'Mock Attribute 1',
+//                     isPrimaryKey: false,
+//                     isOptional: false,
+//                 }
+//             ]
+//         },
+//         {
+//             identifier: 2,
+//             positionX: 1,
+//             positionY: 2,
+//             shapeWidth: 4,
+//             shapeHeight: 4,
+//             name: 'Mock Entity 2',
+//             isWeak: true,
+//             attributes: [
+//                 {
+//                     identifier: 2,
+//                     positionX: 2,
+//                     positionY: 4,
+//                     shapeWidth: 4,
+//                     shapeHeight: 4,
+//                     name: 'Mock Attribute 2',
+//                     isPrimaryKey: false,
+//                     isOptional: false,
+//                 }
+//             ]
+//         }
+//     ]
+//
+//     var mockRelationship = [{
+//         identifier: 1,
+//         positionX: 1,
+//         positionY: 2,
+//         shapeWidth: 4,
+//         shapeHeight: 4,
+//         name: 'Mock Relationship',
+//         attributes: [
+//             {
+//                 identifier: 3,
+//                 positionX: 2,
+//                 positionY: 4,
+//                 shapeWidth: 4,
+//                 shapeHeight: 4,
+//                 name: 'Mock Attribute Relationship',
+//                 isPrimaryKey: false,
+//                 isOptional: false,
+//             }
+//         ],
+//         lHConstraints: new Map([
+//                 [1, LHConstraint.ONE_TO_MANY],
+//                 [2, LHConstraint.ONE_TO_MANY],
+//             ],
+//         ),
+//     }]
+//
+//     SchemaController.getInstance().addAllEntities(mockEntity);
+//
+//     return res.status(OK).json({SUCCESS: true});
+// });
 
 router.post('/all', async function (req, res, next) {
     // TODO add error catching
@@ -92,9 +92,9 @@ router.post('/all', async function (req, res, next) {
     var relationships: Relationship[] = modelAsJson.relationships;
 
     relationships.map((relationship: Relationship) => {
-        const lHConstraintsConvertion: Map<number, LHConstraint> = new Map()
+        const lHConstraintsConvertion: Map<string, LHConstraint> = new Map()
         Object.entries(relationship.lHConstraints).map((values) => {
-            lHConstraintsConvertion.set(+values[0], values[1])
+            lHConstraintsConvertion.set(values[0], values[1])
         })
 
         relationship.lHConstraints = lHConstraintsConvertion
@@ -120,7 +120,7 @@ router.get('/all', async function (req, res, next) {
             const relationships = Array.from(relationshipMap.values())
             const relationshipResponse: any[] = []
             relationships.map((relationship) => {
-                const lHConstraintsConvertion: Map<number, String> = new Map()
+                const lHConstraintsConvertion: Map<string, String> = new Map()
                 Array.from(relationship.lHConstraints.keys()).map((id) => {
                     lHConstraintsConvertion.set(id, LHConstraint[relationship.lHConstraints.get(id)!])
                 })
@@ -158,7 +158,7 @@ router.get('/relationship', async function (req, res, next) {
         const relationships = Array.from(relationshipMap.values())
         const relationshipResponse: any[] = []
         relationships.map((relationship) => {
-            const lHConstraintsConvertion: Map<number, String> = new Map()
+            const lHConstraintsConvertion: Map<string, String> = new Map()
             Array.from(relationship.lHConstraints.keys()).map((id) => {
                 lHConstraintsConvertion.set(id, LHConstraint[relationship.lHConstraints.get(id)!])
             })
